Notes, all edit + delete, cleaned

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-08-17 14:02+0200\n"
+"POT-Creation-Date: 2020-08-22 17:51+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Patrycja Kozioł <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,8 +25,8 @@ msgstr ""
 msgid "Mytrips"
 msgstr "Moje podróże"
 
-#: .\templates\base.html:54 .\templates\trip\addtrip.html:14
-#: .\templates\trip\index.html:17
+#: .\templates\base.html:54 .\templates\index.html:17
+#: .\templates\trip\addtrip.html:15
 msgid "Add trip"
 msgstr "Dodaj podróż"
 
@@ -39,15 +39,15 @@ msgstr "Moje konto"
 msgid "Log out"
 msgstr "Wyloguj się"
 
-#: .\templates\base.html:58 .\templates\registration\login.html:5
-#: .\templates\registration\login.html:6 .\templates\registration\login.html:14
+#: .\templates\base.html:58 .\templates\registration\login.html:6
+#: .\templates\registration\login.html:7 .\templates\registration\login.html:15
 #, fuzzy
 #| msgid "Log in"
 msgid "Log in"
 msgstr "Zaloguj się"
 
-#: .\templates\base.html:62 .\templates\signup.html:6 .\templates\signup.html:7
-#: .\templates\signup.html:14 .\templates\trip\index.html:21
+#: .\templates\base.html:62 .\templates\index.html:21 .\templates\signup.html:6
+#: .\templates\signup.html:7 .\templates\signup.html:14
 msgid "Register"
 msgstr "Utwórz konto"
 
@@ -56,7 +56,8 @@ msgid "Change password"
 msgstr "Zmień hasło"
 
 #: .\templates\change_password.html:15 .\templates\editprofile.html:15
-#: .\templates\spending\editspending.html:16 .\templates\trip\editplace.html:16
+#: .\templates\note\editnote.html:15 .\templates\place\editplace.html:16
+#: .\templates\spending\editspending.html:16
 msgid "Save"
 msgstr "Zapisz"
 
@@ -69,11 +70,165 @@ msgstr "Wróć do mojego konta"
 msgid "Edit profile"
 msgstr "Edytuj profil"
 
-#: .\templates\profile.html:12 .\tripus\forms.py:31
+#: .\templates\index.html:7
+msgid "Tripus title"
+msgstr "Trip with Us | Jedź z nami"
+
+#: .\templates\index.html:15
+msgid "Header main authenticated"
+msgstr "Nieodkryte miejsca już na Ciebie czekają"
+
+#: .\templates\index.html:16 .\templates\index.html:20
+msgid "Header main2"
+msgstr "Jedź z nami"
+
+#: .\templates\index.html:19
+msgid "Header main unauthenticated"
+msgstr "Dzisiejsze plany to jutrzejsza podróż"
+
+#: .\templates\index.html:33
+msgid "Where will you go"
+msgstr "Dokąd pojedziesz?"
+
+#: .\templates\index.html:34
+msgid "Popular directions"
+msgstr "Najpopularniejsze kierunki to:"
+
+#: .\templates\note\deletenote.html:6 .\templates\note\deletenote.html:7
+#: .\templates\note\editnote.html:17
+msgid "Delete note"
+msgstr "Usuń notatkę"
+
+#: .\templates\note\deletenote.html:15
+msgid "Confirm deleting this note:"
+msgstr "Potwierdź usunięcie notatki:"
+
+#: .\templates\note\deletenote.html:18 .\templates\place\deleteplace.html:19
+#: .\templates\spending\deletespending.html:19
+#: .\templates\spending\spending_template.html:43
+#: .\templates\trip\deletetrip.html:19
+msgid "Delete"
+msgstr "Usuń"
+
+#: .\templates\note\editnote.html:6 .\templates\trip\singletrip.html:67
+msgid "Edit note"
+msgstr "Edytuj notatkę"
+
+#: .\templates\note\editnote.html:7 .\templates\spending\editspending.html:6
+#: .\templates\spending\editspending.html:8
+msgid "Edit spending"
+msgstr "Edytuj wydatek"
+
+#: .\templates\note\editnote.html:16 .\templates\place\viewplace.html:47
+#: .\templates\place\visitlist.html:15
+#: .\templates\spending\viewspending.html:14
+msgid "Back to trip"
+msgstr "Wróć do podróży"
+
+#: .\templates\place\addplace.html:6 .\templates\place\addplace.html:7
+msgid "Add place to visit"
+msgstr "Dodaj miejsce"
+
+#: .\templates\place\addplace.html:15
+#: .\templates\spending\spending_template.html:20
+#: .\templates\trip\singletrip.html:63
+msgid "Add"
+msgstr "Dodaj"
+
+#: .\templates\place\deleteplace.html:6 .\templates\place\deleteplace.html:8
+#: .\templates\place\viewplace.html:46
+msgid "Delete place"
+msgstr "Usuń miejsce"
+
+#: .\templates\place\deleteplace.html:16
+msgid "Confirm deleting this place:"
+msgstr "Potwierdź usunięcie miejsca:"
+
+#: .\templates\place\editplace.html:6 .\templates\place\editplace.html:8
+#: .\templates\place\viewplace.html:45
+msgid "Edit place"
+msgstr "Edytuj miejsce"
+
+#: .\templates\place\editplace.html:17
+msgid "Back to place"
+msgstr "Wróć do miejsca"
+
+#: .\templates\place\viewplace.html:6 .\templates\place\visitlist.html:6
+#: .\templates\place\visitlist.html:7
+msgid "Places to visit"
+msgstr "Miejsca do odwiedzenia"
+
+#: .\templates\place\viewplace.html:15 .\tripus\forms.py:30
+#: .\tripus\forms.py:102
+msgid "name"
+msgstr "Nazwa"
+
+#: .\templates\place\viewplace.html:19 .\tripus\forms.py:103
+msgid "category"
+msgstr "Kategoria"
+
+#: .\templates\place\viewplace.html:23 .\tripus\forms.py:104
+msgid "visit_date"
+msgstr "Data odwiedzenia"
+
+#: .\templates\place\viewplace.html:27 .\tripus\forms.py:105
+msgid "website"
+msgstr "Strona www"
+
+#: .\templates\place\viewplace.html:31 .\tripus\forms.py:106
+msgid "addess"
+msgstr "Adres"
+
+#: .\templates\place\viewplace.html:35 .\tripus\forms.py:107
+msgid "approach"
+msgstr "Dojazd"
+
+#: .\templates\place\viewplace.html:39 .\tripus\forms.py:108
+msgid "notes"
+msgstr "Notatki"
+
+#: .\templates\place\visit_template.html:9
+msgid "Name"
+msgstr "Nazwa"
+
+#: .\templates\place\visit_template.html:10
+msgid "Category"
+msgstr "Kategoria"
+
+#: .\templates\place\visit_template.html:11
+msgid "Visit date"
+msgstr "Data odwiedzenia"
+
+#: .\templates\place\visit_template.html:12
+msgid "Visited"
+msgstr "Odwiedzone"
+
+#: .\templates\place\visit_template.html:13
+#: .\templates\place\visit_template.html:32
+msgid "More"
+msgstr "Więcej"
+
+#: .\templates\place\visit_template.html:27
+msgid "Yes"
+msgstr "Tak"
+
+#: .\templates\place\visit_template.html:29
+msgid "No"
+msgstr "Nie"
+
+#: .\templates\place\visit_template.html:39
+msgid "No visited"
+msgstr "Nie masz jeszcze żadnych miejsc do odwiedzenia"
+
+#: .\templates\place\visitlist.html:14 .\templates\trip\singletrip.html:41
+msgid "Add place"
+msgstr "Dodaj miejsce"
+
+#: .\templates\profile.html:12 .\tripus\forms.py:56
 msgid "first name"
 msgstr "Imię"
 
-#: .\templates\profile.html:16 .\tripus\forms.py:32
+#: .\templates\profile.html:16 .\tripus\forms.py:57
 msgid "last name"
 msgstr "Nazwisko"
 
@@ -118,260 +273,242 @@ msgstr "Usuń wydatek"
 msgid "Confirm deleting this spending:"
 msgstr "Potwierdź usunięcie wydatku:"
 
-#: .\templates\spending\deletespending.html:20
-#: .\templates\trip\deleteplace.html:20
-#: .\templates\trip\spending_template.html:43
-msgid "Delete"
-msgstr "Usuń"
-
-#: .\templates\spending\editspending.html:6
-#: .\templates\spending\editspending.html:8
-msgid "Edit spending"
-msgstr "Edytuj wydatek"
-
 #: .\templates\spending\editspending.html:17
 msgid "Back to spending"
 msgstr "Wróć do wydatków"
 
-#: .\templates\trip\addplace.html:6 .\templates\trip\addplace.html:7
-msgid "Add place to visit"
-msgstr "Dodaj miejsce"
+#: .\templates\spending\spending_template.html:27
+msgid "Single spending"
+msgstr "Wydatek"
 
-#: .\templates\trip\addplace.html:15 .\templates\trip\spending_template.html:19
-msgid "Add"
-msgstr "Dodaj"
+#: .\templates\spending\spending_template.html:28 .\tripus\forms.py:75
+msgid "price"
+msgstr "Kwota"
 
-#: .\templates\trip\addtrip.html:5 .\templates\trip\addtrip.html:6
+#: .\templates\spending\spending_template.html:29
+msgid "Currency"
+msgstr "Waluta"
+
+#: .\templates\spending\spending_template.html:30
+msgid "date"
+msgstr "Data"
+
+#: .\templates\spending\spending_template.html:31
+msgid "Action"
+msgstr "Akcja"
+
+#: .\templates\spending\spending_template.html:42
+msgid "Edit"
+msgstr "Edytuj"
+
+#: .\templates\spending\spending_template.html:50
+#: .\templates\spending\spending_template.html:56
+msgid "Suma"
+msgstr "Suma"
+
+#: .\templates\spending\spending_template.html:64
+msgid "No spending"
+msgstr "Brak wydatków"
+
+#: .\templates\spending\viewspending.html:6
+#: .\templates\spending\viewspending.html:8 .\templates\trip\singletrip.html:45
+msgid "Spending"
+msgstr "Wydatki"
+
+#: .\templates\trip\addtrip.html:6 .\templates\trip\addtrip.html:7
 msgid "New trip"
 msgstr "Dodaj nową podróż"
 
-#: .\templates\trip\deleteplace.html:6 .\templates\trip\deleteplace.html:8
-#: .\templates\trip\viewplace.html:42
-msgid "Delete place"
-msgstr "Usuń miejsce"
+#: .\templates\trip\deletetrip.html:6 .\templates\trip\deletetrip.html:8
+msgid "Delete trip"
+msgstr "Usuń podróż"
 
-#: .\templates\trip\deleteplace.html:16
-msgid "Confirm deleting this place:"
-msgstr "Potwierdź usunięcie miejsca:"
-
-#: .\templates\trip\editplace.html:6 .\templates\trip\editplace.html:8
-#: .\templates\trip\viewplace.html:41
-msgid "Edit place"
-msgstr "Edytuj miejsce"
-
-#: .\templates\trip\editplace.html:17
-msgid "Back to place"
-msgstr "Wróć do miejsca"
+#: .\templates\trip\deletetrip.html:16
+msgid "Confirm deleting this trip:"
+msgstr "Potwierdź usunięcie podróży:"
 
 #: .\templates\trip\edittrip.html:6 .\templates\trip\edittrip.html:7
 msgid "Edit trip"
 msgstr "Edytuj podróż"
 
-#: .\templates\trip\index.html:7
-msgid "Tripus title"
-msgstr "Trip with Us | Jedź z nami"
-
-#: .\templates\trip\index.html:15
-msgid "Header main authenticated"
-msgstr "Nieodkryte miejsca już na Ciebie czekają"
-
-#: .\templates\trip\index.html:16 .\templates\trip\index.html:20
-msgid "Header main2"
-msgstr "Jedź z nami"
-
-#: .\templates\trip\index.html:19
-msgid "Header main unauthenticated"
-msgstr "Dzisiejsze plany to jutrzejsza podróż"
-
-#: .\templates\trip\index.html:33
-msgid "Where will you go"
-msgstr "Dokąd pojedziesz?"
-
-#: .\templates\trip\index.html:34
-msgid "Popular directions"
-msgstr "Najpopularniejsze kierunki to:"
+#: .\templates\trip\edittrip.html:15
+msgid "Save trip"
+msgstr "Dodaj nową podróż"
 
 #: .\templates\trip\singletrip.html:12
 msgid "Weather"
 msgstr "Pogoda"
 
-#: .\templates\trip\singletrip.html:14
+#: .\templates\trip\singletrip.html:15
 msgid "Currency rate"
 msgstr "Kurs walut"
 
-#: .\templates\trip\singletrip.html:15
+#: .\templates\trip\singletrip.html:31
 msgid "Tickets reservations"
 msgstr "Bilety i rezerwacje"
 
-#: .\templates\trip\singletrip.html:16
+#: .\templates\trip\singletrip.html:32
 msgid "Sightseeing list"
 msgstr "Miejsca, które chcę odwiedzić"
 
-#: .\templates\trip\singletrip.html:22
+#: .\templates\trip\singletrip.html:38
 msgid "More places to visit"
 msgstr "Zobacz wszystkie miejsca"
 
-#: .\templates\trip\singletrip.html:25 .\templates\trip\visitlist.html:14
-msgid "Add place"
-msgstr "Dodaj miejsce"
-
-#: .\templates\trip\singletrip.html:28
+#: .\templates\trip\singletrip.html:44
 msgid "To pack list"
 msgstr "Rzeczy do zabrania"
 
-#: .\templates\trip\singletrip.html:29 .\templates\trip\spending.html:6
-#: .\templates\trip\spending.html:8
-msgid "Spending"
-msgstr "Wydatki"
-
-#: .\templates\trip\singletrip.html:36
+#: .\templates\trip\singletrip.html:52
 msgid "More spending"
 msgstr "Wyświetl wszystkie wydatki"
 
-#: .\templates\trip\spending_template.html:27
-msgid "Single spending"
-msgstr "Wydatek"
+#: .\templates\trip\singletrip.html:56
+msgid "Notes"
+msgstr "Notatki"
 
-#: .\templates\trip\spending_template.html:28 .\tripus\forms.py:50
-msgid "price"
-msgstr "Kwota"
+#: .\templates\trip\trip_list.html:10
+msgid "Current trips"
+msgstr "Aktualne podróże"
 
-#: .\templates\trip\spending_template.html:29
-msgid "Currency"
-msgstr "Waluta"
+#: .\templates\trip\trip_list.html:29
+msgid "Future trips"
+msgstr "Zaplanowane podróże"
 
-#: .\templates\trip\spending_template.html:30
-msgid "date"
-msgstr "Data"
+#: .\templates\trip\trip_list.html:48
+msgid "Past trips"
+msgstr "Archiwum podróży"
 
-#: .\templates\trip\spending_template.html:31
-msgid "Action"
-msgstr "Akcja"
-
-#: .\templates\trip\spending_template.html:42
-msgid "Edit"
-msgstr "Edytuj"
-
-#: .\templates\trip\spending_template.html:48
-msgid "Suma"
-msgstr "Suma"
-
-#: .\templates\trip\spending_template.html:54
-msgid "No spending"
-msgstr "Brak wydatków"
-
-#: .\templates\trip\trip_list.html:31
+#: .\templates\trip\trip_list.html:70
 msgid "You have no trips"
 msgstr "Nie masz jeszcze żadnych podróży. Może czas coś zaplanować?"
 
-#: .\templates\trip\viewplace.html:6 .\templates\trip\visitlist.html:6
-#: .\templates\trip\visitlist.html:7
-msgid "Places to visit"
-msgstr "Miejsca do odwiedzenia"
+#: .\tripus\forms.py:13
+msgid "restaurant"
+msgstr "restauracja"
 
-#: .\templates\trip\viewplace.html:15 .\tripus\forms.py:72
-msgid "name"
-msgstr "Nazwa"
+#: .\tripus\forms.py:14
+msgid "monument"
+msgstr "zabytek"
 
-#: .\templates\trip\viewplace.html:19 .\tripus\forms.py:73
-msgid "visit_date"
-msgstr "Data odwiedzenia"
+#: .\tripus\forms.py:15
+msgid "attraction"
+msgstr "atrakcja"
 
-#: .\templates\trip\viewplace.html:23 .\tripus\forms.py:74
-msgid "website"
-msgstr "Strona www"
-
-#: .\templates\trip\viewplace.html:27 .\tripus\forms.py:75
-msgid "addess"
-msgstr "Adres"
-
-#: .\templates\trip\viewplace.html:31 .\tripus\forms.py:76
-msgid "approach"
-msgstr "Dojazd"
-
-#: .\templates\trip\viewplace.html:35 .\tripus\forms.py:77
-msgid "notes"
-msgstr "Notatki"
-
-#: .\templates\trip\viewplace.html:43 .\templates\trip\visitlist.html:15
-msgid "Back to trip"
-msgstr "Wróć do podróży"
-
-#: .\templates\trip\visit_template.html:25
-msgid "Yes"
-msgstr "Tak"
-
-#: .\templates\trip\visit_template.html:27
-msgid "No"
-msgstr "Nie"
-
-#: .\templates\trip\visit_template.html:30
-msgid "More"
-msgstr "Więcej"
-
-#: .\templates\trip\visit_template.html:37
-msgid "No visited"
-msgstr "Nie masz jeszcze żadnych miejsc do odwiedzenia"
+#: .\tripus\forms.py:16
+msgid "outside"
+msgstr "na zewnątrz"
 
 #: .\tripus\forms.py:17
-msgid "trip name"
-msgstr "Nazwa podróży"
+msgid "shop"
+msgstr "sklep"
 
-#: .\tripus\forms.py:19
+#: .\tripus\forms.py:18
+msgid "other"
+msgstr "inne"
+
+#: .\tripus\forms.py:31
+msgid "country"
+msgstr "Kraj"
+
+#: .\tripus\forms.py:32
 msgid "city"
 msgstr "Miasto"
 
-#: .\tripus\forms.py:20
-msgid "departure date"
+#: .\tripus\forms.py:33
+msgid "Departure date"
 msgstr "Data wyjazu"
 
-#: .\tripus\forms.py:21
-msgid "comeback date"
+#: .\tripus\forms.py:34
+msgid "Comeback date"
 msgstr "Data powrotu"
 
-#: .\tripus\forms.py:22
-msgid "trip target"
+#: .\tripus\forms.py:35
+msgid "Target"
 msgstr "Cel wyjazdu"
 
-#: .\tripus\forms.py:33
+#: .\tripus\forms.py:58
 msgid "email address"
 msgstr "Adres email"
 
-#: .\tripus\forms.py:49
-msgid "spending name"
-msgstr "Wydatek"
-
-#: .\tripus\forms.py:51
+#: .\tripus\forms.py:68 .\tripus\forms.py:76
 msgid "currency"
 msgstr "Waluta"
 
-#: .\tripus\forms.py:52
+#: .\tripus\forms.py:74
+msgid "spending name"
+msgstr "Wydatek"
+
+#: .\tripus\forms.py:77
 msgid "spending date"
 msgstr "Data"
 
-#: .\tripus\forms.py:78
+#: .\tripus\forms.py:109
 msgid "visited"
 msgstr "Odwiedzone"
 
-#: .\tripus\views.py:53
-msgid "Your password was updated successfully!"
-msgstr "Hasło zostało zmienione!"
+#: .\tripus\forms.py:149
+msgid "text"
+msgstr "Treść"
 
-#: .\tripus\views.py:132
-msgid "Spending was updated successfully!"
-msgstr "Wydatek został edytowany!"
-
-#: .\tripus\views.py:210
-msgid "You added a new place to visit!"
-msgstr "Nowe miejsce zostało dodane!"
-
-#: .\tripus\views.py:224
-msgid "Place was updated successfully!"
-msgstr "Miejsce zostało edytowane!"
-
-#: .\tripus\views.py:283
+#: .\tripus\views.py:50
 msgid "Your profile was updated successfully!"
 msgstr "Profil został edytowany!"
 
-#~ msgid "country"
-#~ msgstr "Kraj"
+#: .\tripus\views.py:92
+msgid "Your password was updated successfully!"
+msgstr "Hasło zostało zmienione!"
+
+#: .\tripus\views.py:155 .\tripus\views.py:251
+msgid "You added a new spending!"
+msgstr "Wydatek został dodany!"
+
+#: .\tripus\views.py:172
+msgid "You added a note!"
+msgstr "Notatka została dodana!"
+
+#: .\tripus\views.py:194
+msgid "You added a new trip!"
+msgstr "Nowa podróż została dodana!"
+
+#: .\tripus\views.py:208
+msgid "Trip was updated successfully!"
+msgstr "Podróż została edytowana!"
+
+#: .\tripus\views.py:222
+msgid "Trip was deleted successfully!"
+msgstr "Podróż została usunięta!"
+
+#: .\tripus\views.py:289
+msgid "Spending was updated successfully!"
+msgstr "Wydatek został edytowany!"
+
+#: .\tripus\views.py:309
+msgid "Spending was deleted successfully!"
+msgstr "Wydatek został usunięty!"
+
+#: .\tripus\views.py:335
+msgid "You added a new place to visit!"
+msgstr "Nowe miejsce zostało dodane!"
+
+#: .\tripus\views.py:349
+msgid "Place was updated successfully!"
+msgstr "Miejsce zostało edytowane!"
+
+#: .\tripus\views.py:364
+msgid "Place was deleted successfully!"
+msgstr "Miejsce zostało usunięte!"
+
+#: .\tripus\views.py:387
+msgid "Note was updated successfully!"
+msgstr "Notatka została edytowana!"
+
+#: .\tripus\views.py:402
+msgid "Note was deleted successfully!"
+msgstr "Notatka została usunięta!"
+
+#~ msgid "trip name"
+#~ msgstr "Nazwa podróży"
+
+#~ msgid "trip target"
+#~ msgstr "Cel wyjazdu"
